@@ -1,5 +1,11 @@
 2008-03-08  Bastien Nocera  <hadess@hadess.net>
 
+	* libgsm/phonemgr-utils.c (find_service_channel):
+	Don't use the public browse group to look for the Serial/DUN
+	channel (Closes: #511220)
+
+2008-03-08  Bastien Nocera  <hadess@hadess.net>
+
 	* libgsm/Makefile.am:
 	* libgsm/test-sdp-search.c (main): Add a test program for
 	finding out the serial channel on a remote device
